# ChangeLog for sys-apps/portage
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1110 2012/09/27 22:06:32 zmedico Exp $

*portage-2.2.0_alpha134 (27 Sep 2012)

  27 Sep 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha134.ebuild,
  -portage-2.2.0_alpha132.ebuild:
  2.2.0_alpha134 version bump. This includes all of the fixes in 2.1.11.23. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.23 (27 Sep 2012)

  27 Sep 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.23.ebuild,
  -portage-2.1.11.21.ebuild:
  2.1.11.23 version bump. This fixes bug #436330 (extended atom syntax in
  /etc/portage/profile) and bug #436334 (intermittent test failure in
  test_ipc_daemon, triggered by heavy load). Bug #431026 tracks all bugs fixed
  since portage-2.1.11.9.

*portage-2.2.0_alpha133 (26 Sep 2012)

  26 Sep 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha133.ebuild,
  -portage-2.2.0_alpha131.ebuild:
  2.2.0_alpha133 version bump. This includes all of the fixes in 2.1.11.22. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.22 (26 Sep 2012)

  26 Sep 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.22.ebuild,
  -portage-2.1.11.20.ebuild:
  2.1.11.22 version bump. This fixes bug #436084 (avoid unnecessary scanning of
  PKGDIR). This also adds support for experimental EAPI 5-hdepend. Bug #431026
  tracks all bugs fixed since portage-2.1.11.9.

*portage-2.2.0_alpha132 (24 Sep 2012)

  24 Sep 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha132.ebuild,
  -portage-2.2.0_alpha130.ebuild:
  2.2.0_alpha132 version bump. This includes all of the fixes in 2.1.11.21. Bug
  #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.21 (24 Sep 2012)

  24 Sep 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.21.ebuild,
  -portage-2.1.11.19.ebuild: